--- a/app/src/main/res/layout/activity_journal_detail.xml
+++ b/app/src/main/res/layout/activity_journal_detail.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -46,16 +45,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.2" />
 
-    <TextView
+    <EditText
         android:id="@+id/journalText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:ems="10"
         android:gravity="start|top"
+        android:inputType="textMultiLine"
+        android:hint="Write your journal entry here"
+        android:textColorHint="#8C8C8C"
+        android:background="@null"
         android:textColor="#2E2E2E"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateDisplay"
         android:layout_marginTop="35dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp" />
+        android:layout_marginRight="30dp"/>
 
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="324dp"
+        android:clickable="true"
+        android:backgroundTint="#92C7CF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/journalText"
+        app:layout_constraintVertical_bias="0.95"
+        app:srcCompat="@android:drawable/ic_menu_save"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
