--- a/app/src/main/res/layout/activity_journal_detail.xml
+++ b/app/src/main/res/layout/activity_journal_detail.xml
@@ -62,6 +62,18 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="324dp"
+        android:clickable="true"
+        android:backgroundTint="#92C7CF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/journalText"
+        app:layout_constraintVertical_bias="0.80"
+        app:srcCompat="@android:drawable/ic_menu_delete"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/saveButton"
