--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -22,10 +22,23 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/userInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hi, "
+        android:textSize="25dp"
+        android:textColor="@color/black"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.15" />
+
+    <TextView
         android:id="@+id/journalTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Title"
+        android:text="Your Moods"
         android:textSize="25dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,7 +51,7 @@
         android:id="@+id/journalDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Test"
+        android:hint=""
         android:textSize="15dp"
         android:textColor="@color/black"
         android:layout_marginTop="35dp"
@@ -75,24 +88,39 @@
     app:layout_constraintVertical_bias="0.95"
     app:srcCompat="@android:drawable/ic_input_add"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/shadingView"
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/journalDisplay"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvDashboardJournalEntries"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:clipToPadding="false"
+        android:paddingBottom="15dp"
+        android:scrollbars="vertical"
+        android:textColor="@color/black"
+        android:textSize="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="10dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
     <Button
         android:id="@+id/viewEntriesButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Journal Entries"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="All Journals ->"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/journalTitle"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
